[package]
name = "automerge-battery"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
automerge = { path = "../automerge/rust/automerge" }
divan = "0.1.15"
rand = "0.8.5"
jzon = "^0.12.5"
serde_json = "^1.0.128"

[[bench]]
name = "load_save"
harness = false

[[bench]]
name = "bestiary"
harness = false

[[bench]]
name = "sync"
harness = false

[[bench]]
name = "map"
harness = false

[[bench]]
name = "range"
harness = false

[[bench]]
name = "edit_trace"
harness = false
