[package]
name = "automerge-battery"
version = "0.1.0"
edition = "2021"

[dependencies]
automerge = { path = "../automerge/rust/automerge" }
packer = { path = "../automerge/rust/packer" }
rand = "0.8.5"

[dev-dependencies]
divan = "0.1.15"
jzon = "^0.12.5"
serde_json = "^1.0.128"

[profile.bench]
debug = true

[[bench]]
name = "load_save"
harness = false

[[bench]]
name = "bestiary"
harness = false

[[bench]]
name = "sync"
harness = false

[[bench]]
name = "map"
harness = false

[[bench]]
name = "range"
harness = false

[[bench]]
name = "edit_trace"
harness = false

[[bench]]
name = "drop"
harness = false

[[bench]]
name = "build"
harness = false

[[bench]]
name = "fork"
harness = false

[[bench]]
name = "packer"
harness = false
