[package]
name = "automerge-battery"
version = "0.1.0"
edition = "2021"

[dependencies]
automerge = { path = "../automerge/rust/automerge" }
#automerge = "1.0.0-alpha.4"
#automerge = "0.6.0"
hexane = { path = "../automerge/rust/hexane" }
getrandom = "0.3.3"
rand = "0.8.5"
trace-alloc = { path = "../diamond-types/crates/trace-alloc", features = [ "memusage" ] }

[dev-dependencies]
divan = "0.1.15"
jzon = "^0.12.5"
serde_json = "^1.0.128"

[profile.bench]
debug = true

[[bench]]
name = "load_save"
harness = false

[[bench]]
name = "bestiary"
harness = false

[[bench]]
name = "sync"
harness = false

[[bench]]
name = "map"
harness = false

[[bench]]
name = "range"
harness = false

[[bench]]
name = "edit_trace"
harness = false

[[bench]]
name = "mem"
harness = false

[[bench]]
name = "build"
harness = false

[[bench]]
name = "apply"
harness = false

[[bench]]
name = "egwalker_paper"
harness = false

[[bench]]
name = "typing"
harness = false

[[bench]]
name = "marks"
harness = false

[[bench]]
name = "length"
harness = false

[[bench]]
name = "list"
harness = false

#--[[bench]]
#--name = "packer"
#--harness = false
